# Local-RAG-engine

./: .env  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  pyproject.toml
python/rusty_rag/: __init__.py  cli.py  db.py  embeddings.py  llm.py  rag.py
src/: bm25.rs  chunker.rs  db.rs  embeddings.rs  lib.rs  llm.rs  main.rs  pdf.rs  rag.rs  tokenizer.rs
tests/: test_all.py
