[package]
name = "rusty_rag_core"
version = "0.1.0"
edition = "2021"
description = "Rust core for RustyRAG — high-performance PDF extraction and parallel text chunking"

[lib]
name = "rusty_rag_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
pdf-extract = "0.10"
memmap2 = "0.9"
rayon = "1.10"
anyhow = "1"
